--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -1,67 +1,148 @@
 <!doctype html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="author" content="Codecool" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>Codecool Shop</title>
-
-    <!-- Latest compiled and minified Jquery -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-
-    <!-- Latest compiled and minified CSS -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap 101 Template</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" type="text/css" href="/css/custom.css" />
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="../public/css/custom.css">
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 </head>
-
 <body>
-
-<div class="jumbotron text-center">
-    <h1>Codecool Shop</h1>
-</div>
-
-<div class="container">
-    <div class="well well-sm">
-        <strong th:text="${category.name}">Category Title</strong>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#navbar-collapse" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">CoolShop</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button">
+                                <span class="glyphicon glyphicon-search"></span>
+                            </button>
+                        </span>
+                        <input type="text" class="form-control" placeholder="Search for...">
+                    </div>
+                </div>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="col-sm-3">
+                    <div class="navbar-form navbar-right">
+                        <select class="form-control" id="currency-select">
+                            <option>PLN</option>
+                            <option>EUR</option>
+                            <option>USD</option>
+                            <option>PHP</option>
+                        </select>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">Cart
+                        <span class="glyphicon glyphicon-shopping-cart"></span>
+                        <span class="text">1210,00 PLN</span>
+                        <span class="badge">42</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Login  <span class="glyphicon glyphicon-user"></span></a>
+                </li>
+            </ul>
+        </div>
     </div>
-
-    <div id="products" class="row list-group">
-
-        <div class="item col-xs-4 col-lg-4" th:each="prod,iterStat : ${products}">
-            <div class="thumbnail">
-                <img class="group list-group-image" src="http://placehold.it/400x250/000/fff" th:attr="src='/img/product_' + ${prod.id} + '.jpg'" alt="" />
-                <div class="caption">
-                    <h4 class="group inner list-group-item-heading" th:text="${prod.name}">Product name</h4>
-                    <p class="group inner list-group-item-text" th:text="${prod.description}">Product description... </p>
-                    <div class="row">
-                        <div class="col-xs-12 col-md-6">
-                            <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
+</nav>
+<div class="container-fluid">
+    <div class="row full-width-row">
+        <div class="col-sm-3">
+            <div class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                                data-target="#categories-collapse" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a href="#" class="navbar-brand hidden-sm hidden-md hidden-lg">Categories</a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="categories-collapse">
+                        <div class="sidenav">
+                            <div class="row">
+                                <h3 class="hidden-xs">Categories</h3>
+                            </div>
+                            <ul id="categories" class="list-group">
+                                <a href="#"><li class="list-group-item">New <span class="badge">12</span></li></a>
+                                <a href="#"><li class="list-group-item">New <span class="badge">5</span></li></a>
+                                <a href="#"><li class="list-group-item">New <span class="badge">14</span></li></a>
+                                <a href="#"><li class="list-group-item">New <span class="badge">3</span></li></a>
+                                <a href="#"><li class="list-group-item">New <span class="badge">1</span></li></a>
+                                <a href="#"><li class="list-group-item">New <span class="badge">0</span></li></a>
+                            </ul>
                         </div>
-                        <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="#">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                                data-target="#suppliers-collapse" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a href="#" class="navbar-brand hidden-sm hidden-md hidden-lg">Suppliers</a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="suppliers-collapse">
+                        <div class="sidenav">
+                            <div class="row">
+                                <h3 class="hidden-xs">Suppliers</h3>
+                            </div>
+                            <ul id="Suppliers" class="list-group">
+                                <a href="#"><li class="list-group-item">New <span class="badge">12</span></li></a>
+                                <a href="#"><li class="list-group-item">New <span class="badge">5</span></li></a>
+                                <a href="#"><li class="list-group-item">New <span class="badge">1</span></li></a>
+                                <a href="#"><li class="list-group-item">New <span class="badge">0</span></li></a>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="col-sm-9">
+            <div>
+                <h3 class="text-center">All products</h3>
+            </div>
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Product name</div>
+                    <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                    <div class="panel-footer justified">
+                        120,00 PLN
+                        <div class="text-right"><button class="btn">ADD</button></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
 </div>
-
-<div th:replace="footer :: copy"></div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous">
+</script>
 </body>
 </html>
