--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Online shop</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
     <link rel="stylesheet" th:href="@{~/css/custom.css}"/>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -82,8 +83,10 @@
                                 <h3 class="hidden-xs">Categories</h3>
                             </div>
                             <ul id="categories" class="list-group">
-                                <a th:href="@{/category/{id}(id=${category.id})}" th:each="category : ${productCategoriesList}">
-                                    <li class="list-group-item" th:text="${category.name}">New <span class="badge">12</span></li>
+                                <a th:href="@{~/category/{id}(id=${category.id})}" th:each="category : ${productCategoryList}">
+                                    <div>
+                                        <li class="list-group-item" th:inline="text">[[${category.name}]] <span class="badge">[[${category.getProductsCount()}]]</span></li>
+                                    </div>
                                 </a>
                             </ul>
                         </div>
@@ -108,7 +111,9 @@
                                 <h3 class="hidden-xs">Suppliers</h3>
                             </div>
                             <ul id="Suppliers" class="list-group">
-                                <a><li class="list-group-item">New <span class="badge">0</span></li></a>
+                                <a th:href="@{~/category/{id}(id=${supplier.id})}" th:each="supplier : ${productSupplierList}">
+                                    <li class="list-group-item" th:text="${supplier.name}">New</li>
+                                </a>
                             </ul>
                         </div>
                     </div>
@@ -119,13 +124,21 @@
             <div>
                 <h3 class="text-center">All products</h3>
             </div>
-            <div class="col-sm-4" th:each="product : ${productList}">
+            <div th:each="product : ${productList}">
                 <div class="panel panel-primary">
-                    <div class="panel-heading item-panel-header text-center" th:text="${product.name}">Product name</div>
-                    <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"/></div>
-                    <div class="panel-footer justified">
-                        <span th:text="${#numbers.formatDecimal(product.getConvertedFloatPrice(),1,2)} + ' ' + ${product.getBaseCurrency()}">120,00 PLN</span>
-                        <div class="text-right"><button class="btn">ADD</button></div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <img th:src="@{~/img/render.png}" class="img-responsive" style="width:100%" alt="Image"/>
+                            </div>
+                            <div class="col-sm-6">
+                                <strong class="text-left" th:text="${product.name}">Product name</strong>
+                            </div>
+                            <div class="col-sm-3 justified">
+                                <h4 th:text="${#numbers.formatDecimal(product.getConvertedFloatPrice(),1,2)} + ' ' + ${product.getBaseCurrency()}">120,00 PLN</h4>
+                                <div class="text-right"><button class="btn">ADD</button></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
