Change button type to submit

--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -29,11 +29,11 @@
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
+                            <button class="btn btn-default" type="submit">
                                 <span class="glyphicon glyphicon-search"></span>
                             </button>
                         </span>
-                        <input type="text" class="form-control" placeholder="Search for..."/>
+                        <input type="text" name="search" id="search" class="form-control" placeholder="Search for..."/>
                     </div>
                 </div>
             </form>
