--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -37,6 +37,11 @@
                     </div>
                 </div>
             </form>
+            <div class="navbar-form navbar-left">
+                <div class="form-group">
+                    <a th:href="@{~/add}"><button class="btn btn-primary">Add Product</button></a>
+                </div>
+            </div>
             <ul class="nav navbar-nav navbar-right">
                 <li class="col-sm-3">
                     <div class="navbar-form navbar-right">
