--- a/src/main/resources/templates/product/checkout.html
+++ b/src/main/resources/templates/product/checkout.html
@@ -99,40 +99,31 @@
                 <h3 th:text="${info}" class="text-center"></h3>
             </div>
             <div class="container-fluid">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th>Product name</th>
-                            <th>quantity</th>
-                            <th>option</th>
-                            <th>value</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>alskjdsaldjkadadsa</td>
-                            <td>23</td>
-                            <td>
-                                <button class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></button>
-                            </td>
-                            <td class="text-right">123,45</td>
-                        </tr>
-                        <tr>
-                            <td>asdasdadsadasd</td>
-                            <td>11</td>
-                            <td>
-                                <button class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></button>
-                            </td>
-                            <td class="text-right">15,15</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="container-fluid text-right">
-                    <h4>Total <b>123,65 PLN</b></h4>
-                    <button class="btn btn-success">Checkout</button>
-                </div>
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="fname">First name:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="fname" placeholder="Enter first name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="lname">Last name:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="lname" placeholder="Enter last name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="card-no">Card number:</label>
+                        <div class="col-sm-10">
+                            <input type="number" class="form-control" id="card-no" placeholder="Enter card number">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-success">Payment</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
