--- a/src/main/resources/templates/product/add.html
+++ b/src/main/resources/templates/product/add.html
@@ -121,38 +121,52 @@
             </div>
         </div>
         <div class="col-sm-9">
-            <h2>Add product</h2>
-            <form th:method="post">
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name"/>
+            <div class="container-fluid">
+                <h2>Add product</h2>
+                <form class="form-horizontal" th:method="post">
+                    <div class="form-group">
+                        <label for="name" class="control-label col-sm-2">Name:</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="text" id="name" name="name" placeholder="Product name"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="defaultprice" class="control-label col-sm-2">Price:</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="number" min="0.00" step="0.01" id="defaultprice" name="defaultprice" placeholder="0.00"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="description" class="control-label col-sm-2">Description:</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="text" id="description" name="description" placeholder="Description"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="chooseCategory">Category:</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" name="chooseCategory" id="chooseCategory">
+                                <option name="category" th:each="category : ${productCategoryList}"  th:value="${category.getId()}" th:text="${category.getName()}"></option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="chooseSupplier">Supplier:</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" name="chooseSupplier" id="chooseSupplier">
+                                <option name="supplier" th:each="supplier : ${productSupplierList}" th:value="${supplier.getId()}" th:text="${supplier.getName()}"></option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2">
+                            <button type="submit" class="btn btn-success">Add</button>
+                        </div>
+                    </div>
+                </form>
+                <div id="error">
+                    <h3 th:text="${error}"></h3>
                 </div>
-                <div class="form-group">
-                    <label for="defaultprice">Price:</label>
-                    <input type="number" min="0.00" step="0.01" id="defaultprice" name="defaultprice"/>
-                </div>
-                <div class="form-group">
-                    <label for="description">Description:</label>
-                    <input type="text" id="description" name="description"/>
-                </div>
-                <div class="form-group">
-                    <label for="chooseCategory">Category:</label>
-                    <select name="chooseCategory" id="chooseCategory">
-                        <option name="category" th:each="category : ${productCategoryList}"  th:value="${category.getId()}" th:text="${category.getName()}"></option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="chooseSupplier">Supplier:</label>
-                    <select name="chooseSupplier" id="chooseSupplier">
-                        <option name="supplier" th:each="supplier : ${productSupplierList}" th:value="${supplier.getId()}" th:text="${supplier.getName()}"></option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-success">Add</button>
-                </div>
-            </form>
-            <div id="error">
-                <h3 th:text="${error}"></h3>
             </div>
         </div>
     </div>
