--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -160,6 +160,31 @@
             </div>
         </div>
     </div>
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h3 class="text-center" id="modal-title">Modal Header</h3>
+                </div>
+                <div class="modal-body">
+                    <h4>Category:</h4>
+                    <p id="modal-cat">Blabla</p>
+                    <h4>Supplier:</h4>
+                    <p id="modal-sup"></p>
+                    <h4>Description:</h4>
+                    <p id="modal-desc">Some text in the modal.</p>
+                </div>
+                <div class="modal-footer">
+                    <h4 class="pull-left" id="price">PRICE</h4>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
