Move javascript from html to separate file

--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -191,39 +191,7 @@
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous">
 </script>
-<script>
-    $(document).ready(function () {
-        $(".btn-description").click(function () {
-            var prodId = $(this).closest('.row').find(".productid").val();
-            var route = "/product/" + prodId;
-            $.getJSON(route, function (product) {
-                $("#modal-title").text(product.name);
-                $("#modal-cat").text(product.categoryName);
-                $("#modal-sup").text(product.supplierName);
-                $("#modal-desc").text(product.description);
-                var price = "PRICE: " + Number((product.price).toFixed(2)) + " " + product.currency;
-                $("#price").text(price)
-            });
+<script src="/js/main.js" th:href="@{~/js/main.js}"></script>
 
-            $('#myModal').modal('show');
-        });
-
-        var $searchBox = $("#search");
-        var $searchButton = $("#search-btn");
-
-
-        $searchBox.on('keydown', function () {
-            setTimeout(function () {   //calls click event after a certain time;
-                if ($searchBox.val().length >= 3) {
-                    $searchButton.prop('disabled', false);
-                } else {
-                    $searchButton.prop('disabled', true);
-                }
-            }, 100);
-        });
-
-    });
-
-</script>
 </body>
 </html>
