Fix filter, Change index controller

--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -56,7 +56,7 @@
                 <li>
                     <a th:href="@{~/cart}">Cart
                         <span class="glyphicon glyphicon-shopping-cart"></span>
-                        <span class="text" th:text="${sum}">1210,00</span>
+                        <span class="text" th:text="${#numbers.formatDecimal(sum, 1, 2)}">1210,00</span>
                         <span class="badge" th:text="${count}">42</span>
                     </a>
                 </li>
@@ -145,7 +145,7 @@
                                 <form th:action = "@{'~/basket/add/'+${product.id}}" method = "post">
                                     <div class="form-group">
                                         <div class="input-group">
-                                            <input type="number" name="quantity" id="quantity" class="form-control" placeholder="qty"/>
+                                            <input type="number" name="quantity" id="quantity" min="1" class="form-control" placeholder="qty" required="required"/>
                                             <input type="hidden" name="productid" class="productid" th:value="${product.id}"/>
                                             <span class="input-group-btn">
                                                 <button class="btn btn-success" type="submit">Add</button>
